crates/erased-oopsie/tests/snapshots/erased__erased_error_display_unstable.snap
---
source: crates/erased-oopsie/tests/erased.rs
expression: error
---
Error: 

  ✕ Inner error happened
  ╰─▶ Error: Inner function failed (foo=true, name=Alice)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   0: sys::inner_function
           with {"foo":true,"id":42,"name":"Alice"}
             at crates/erased-oopsie/tests/common/mod.rs:[LOC]
   1: controller::outer_function
           with {"foo":true,"name":"Alice"}
             at crates/erased-oopsie/tests/common/mod.rs:[LOC]
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   0: <oopsie_core::backtrace::BackTrace as oopsie_core::traits::Capturable>::capture
           at [WORKSPACE_ROOT]/crates/oopsie-core/src/backtrace.rs:[LOC]
   1: <alloc::boxed::Box<oopsie_core::backtrace::BackTrace> as oopsie_core::traits::Capturable>::capture
           at [WORKSPACE_ROOT]/crates/oopsie-core/src/traits.rs:[LOC]
   2: <erased::common::MyErrorInnerOopsie<alloc::string::String>>::build
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/common/mod.rs:[LOC]
   3: <erased::common::MyErrorInnerOopsie<alloc::string::String>>::fail::<()>
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/common/mod.rs:[LOC]
   4: erased::common::make_error::inner_function
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/common/mod.rs:[LOC]
   5: erased::common::make_error::outer_function
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/common/mod.rs:[LOC]
   6: erased::common::make_error
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/common/mod.rs:[LOC]
   7: erased::test_erased_error_display
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/erased.rs:[LOC]
   8: erased::test_erased_error_display::{closure#0}
           at [WORKSPACE_ROOT]/crates/erased-oopsie/tests/erased.rs:[LOC]
   9: <erased::test_erased_error_display::{closure#0} as core::ops::function::FnOnce<()>>::call_once
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
  10: <fn() -> core::result::Result<(), alloc::string::String> as core::ops::function::FnOnce<()>>::call_once
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
  11: test::__rust_begin_short_backtrace::<core::result::Result<(), alloc::string::String>, fn() -> core::result::Result<(), alloc::string::String>>
           at [STDLIB]/library/test/src/lib.rs:[LOC]
  12: test::run_test_in_process::{closure#0}
           at [STDLIB]/library/test/src/lib.rs:[LOC]
  13: <core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}> as core::ops::function::FnOnce<()>>::call_once
           at [STDLIB]/library/core/src/panic/unwind_safe.rs:[LOC]
  14: std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>, core::result::Result<(), alloc::string::String>>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
  15: std::panicking::catch_unwind::<core::result::Result<(), alloc::string::String>, core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
  16: std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<test::run_test_in_process::{closure#0}>, core::result::Result<(), alloc::string::String>>
           at [STDLIB]/library/std/src/panic.rs:[LOC]
  17: test::run_test_in_process
           at [STDLIB]/library/test/src/lib.rs:[LOC]
  18: test::run_test::{closure#0}
           at [STDLIB]/library/test/src/lib.rs:[LOC]
  19: test::run_test::{closure#1}
           at [STDLIB]/library/test/src/lib.rs:[LOC]
  20: std::sys::backtrace::__rust_begin_short_backtrace::<test::run_test::{closure#1}, ()>
           at [STDLIB]/library/std/src/sys/backtrace.rs:[LOC]
  21: std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}
           at [STDLIB]/library/std/src/thread/lifecycle.rs:[LOC]
  22: <core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}> as core::ops::function::FnOnce<()>>::call_once
           at [STDLIB]/library/core/src/panic/unwind_safe.rs:[LOC]
  23: std::panicking::catch_unwind::do_call::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
  24: std::panicking::catch_unwind::<(), core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>>
           at [STDLIB]/library/std/src/panicking.rs:[LOC]
  25: std::panic::catch_unwind::<core::panic::unwind_safe::AssertUnwindSafe<std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>
           at [STDLIB]/library/std/src/panic.rs:[LOC]
  26: std::thread::lifecycle::spawn_unchecked::<test::run_test::{closure#1}, ()>::{closure#1}
           at [STDLIB]/library/std/src/thread/lifecycle.rs:[LOC]
  27: <std::thread::lifecycle::spawn_unchecked<test::run_test::{closure#1}, ()>::{closure#1} as core::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
  28: <alloc::boxed::Box<dyn core::ops::function::FnOnce<(), Output = ()> + core::marker::Send> as core::ops::function::FnOnce<()>>::call_once
           at [STDLIB]/library/alloc/src/boxed.rs:[LOC]
  29: <std::sys::thread::unix::Thread>::new::thread_start
           at [STDLIB]/library/std/src/sys/thread/unix.rs:[LOC]
